# scion

./: .gitignore  go.mod  go.sum
env/debian/: pkgs.txt
gen.tiny/: as_list.yml  ia  ifids.yml  networks.conf  overlay  prometheus.yml
gen.tiny/CAS/ISD1/: CA1-1.cert  CA1-1.key
gen.tiny/ISD1/ASff00_0_110/: prometheus.yml  supervisord.conf
gen.tiny/ISD1/ASff00_0_110/br1-ff00_0_110-1/: as.yml  br1-ff00_0_110-1.zlog.conf  supervisord.conf
gen.tiny/ISD1/ASff00_0_110/br1-ff00_0_110-2/: br1-ff00_0_110-2.zlog.conf  (+1 more)
gen.tiny/ISD1/ASff00_0_111/: prometheus.yml  supervisord.conf
gen.tiny/ISD1/ASff00_0_112/: prometheus.yml  supervisord.conf
gen.tiny/ISD1/ASff00_0_113/: prometheus.yml  supervisord.conf
gen.tiny/dispatcher/: supervisord.conf
go/border/braccept/: child_tests.go  core_tests.go  ignore.go  multi_ifs_tests.go  parent_tests.go  peer_tests.go  revocation_tests.go  scmp_tests.go  svc_tests.go
go/border/rpkt/: extns.go
go/lib/appconf/: BUILD.bazel  appconf.go
go/lib/hpkt/: read.go  write.go
go/lib/layers/: BUILD.bazel  extensions.go  extensions_layer.go  extensions_layer_test.go  scion_layer.go  scion_layer_parser.go
go/lib/pathmgr/: pathmgr.go
go/lib/pathpol/: acl.go  hop_pred.go
go/lib/snet/: BUILD.bazel  conn_wrapper.go  interface.go  packet_conn.go  scion_layer.go  scion_layer_parser.go  scion_layer_test.go  scion_packet_decoder.go  writer.go
go/lib/spkt/: cmnhdr.go
go/lib/spse/: BUILD.bazel  spse.go
go/lib/svc/: messages.go
go/proto/: cereal.go
go/tools/scion-pki/: main.go
tmp/: scionlab-services.txt
topology/: Tiny.topo
(+104 files in other folders)
