load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["appconf.go"],
    importpath = "github.com/scionproto/scion/go/lib/appconf",
    visibility = ["//visibility:public"],
    deps = [
        "//go/lib/assert:go_default_library",
        "//go/lib/common:go_default_library",
        "//go/lib/overlay:go_default_library",
        "//go/lib/pathpol:go_default_library",
        "//go/lib/spath:go_default_library",
    ],
)
